<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_layout_bg" >

    <LinearLayout
        android:id="@+id/main_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_marginLeft="10dp"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:background="@drawable/ktmoss" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical|left"
                    android:text="@string/login_id_label"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/id_et"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg_img"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#424243"
                    android:textSize="18dp"
                    android:textStyle="bold" >

                  
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical|left"
                    android:text="@string/login_password_label"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_bg_img"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="#424243"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/login_btn"
                android:layout_width="130dp"
                android:layout_height="54dp"
                android:background="@drawable/command_btn"
                android:onClick="clickLoginBtn"
                android:text="@string/dialog_login"
                android:textColor="#ffffff"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>