<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:stretchColumns="1" >

                <!-- 검사항목 -->

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="6dp"
                    android:background="#d0cdbd" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/groupbox_bg_down"
                    android:baselineAligned="true"
                    android:gravity="left|center_vertical"
                    android:visibility="visible" >

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:text="@string/vc_test_01"
                            android:textColor="#424243"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/vc_test_type_spin"
                        android:layout_width="fill_parent"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/selectbox"
                        android:gravity="center"
                        android:prompt="@string/vc_test_type_combo"
                        android:textColor="#424243" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/groupbox_bg_down"
                    android:baselineAligned="true"
                    android:gravity="left|center_vertical" >

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:text="@string/vc_test_02"
                            android:textColor="#424243"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/vc_test_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/edittext_bg_img"
                        android:gravity="center"
                        android:hint="10 ~ 100초"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:textColor="#424243"
                        android:textSize="18dp"
                        android:textStyle="bold" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/groupbox_bg_down"
                    android:baselineAligned="true"
                    android:gravity="left|center_vertical"
                    android:visibility="visible" >

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:text="@string/vc_test_03"
                            android:textColor="#424243"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/vc_testing_time"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/inputbox_disable"
                        android:gravity="center"
                        android:textColor="#7a8089"
                        android:textSize="18dp"
                        android:textStyle="bold" >
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@drawable/groupbox_bg_down"
                    android:baselineAligned="true"
                    android:gravity="left|center_vertical" >

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="6dp"
                            android:text="@string/vc_test_04"
                            android:textColor="#424243"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/vc_test_state"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"                     
                        android:layout_marginRight="8dp"
                        android:background="@drawable/inputbox_disable"
                        android:gravity="center"
                        android:textColor="#424243"
                        android:textSize="15dp"
                        android:textStyle="bold" >
                    </TextView>
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/down"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <Button
                android:id="@+id/vctest_start_btn"
                android:layout_width="60dp"
                android:layout_height="46dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"               
                android:background="@drawable/command_btn"
                android:onClick="clickStartBtn"
                android:text="측정시작"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                 android:id="@+id/vctest_close_btn"
                android:layout_width="60dp"
                android:layout_height="46dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/command_btn"
                android:onClick="clickCloseBtn"
                android:text="닫기"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>